--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.4
 requests==2.18.4
+six==1.11.0
 tornado==5.0.2
 urllib3==1.22
 webencodings==0.5.1
